# pulpino-klessydra

./: .gitattributes  .gitignore  README.md  ips_list.yml  update-ips.py
ipstools/: IPDatabase.py  vsim_defines.py
rtl/: core_region.sv  instr_ram_wrap.sv  periph_bus_wrap.sv  peripherals.sv  pulpino_top.sv  sp_ram_wrap.sv
rtl/includes/: apb_bus.sv
sw/: CMakeLists.txt  cmake_configure.klessydra-m.gcc.sh  klessydra_memory_manager.sh
sw/apps/: CMakeLists.txt  CMakeSim.txt
sw/apps/riscv_tests/testDivRem/: CMakeLists.txt
sw/debug_trace/: awk.sh.save  awk_proc1.sh  awk_proc2.sh  diff.sh
sw/libs/Arduino_lib/core_libs/inc/: WCharacter.h
sw/libs/klessydra_lib/general_libs/inc/: functions.h  klessydra_defs.h
sw/libs/string_lib/inc/: string_lib.h
sw/libs/string_lib/src/: qprintf.c
sw/libs/sys_lib/inc/: i2c.h  pulpino.h
sw/ref/: crt0.klessydra.S  crt0.klessydra_E.S  link.boot.ld  link.boot.ld.in  link.common.ld  link.common.ld.in
sw/utils/: s19toboot.py  s19toslm.py
tb/: spi_debug_test.svh  tb.sv  tb_mem_pkg.sv  tb_spi_pkg.sv
vsim/: .gitignore
vsim/tcl_files/config/: vsim.tcl
vsim/vcompile/: build_rtl_sim.csh  vcompile_klessydra-m.csh
vsim/vcompile/netlist/: vcompile_klessydra_netlists.csh  vcompile_pulpino_netlists.sh
vsim/waves/: klessydra_Het_Cluster.tcl  klessydra_M_core.tcl  klessydra_dft03_core.tcl  klessydra_ft13x_core.tcl  klessydra_t13x_core_no_accl.tcl
